Add index.html in root

--- a/dev/html/index.html
+++ b/dev/html/index.html
@@ -3,6 +3,7 @@
 <head>
    <meta charset="utf-8">
    <title>Linh Truong - Portfolio</title>
+   <meta http-equiv="refresh" content="0; url=https://ngoclinhtruong.github.io/dev/html/index.html" />
    <link rel="stylesheet" href="styles/main.css">
 </head>
 <body>
