--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>💋</title>
+  <meta http-equiv="refresh" content="0; url=https://ngoclinhtruong.github.io/dev/html/index.html" />
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
