--- a/index.html
+++ b/index.html
@@ -1,12 +1,134 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>💋</title>
-  <meta http-equiv="refresh" content="0; url=https://ngoclinhtruong.github.io/dev/html/index.html" />
-  <link rel="stylesheet" href="style.css">
+   <meta charset="utf-8">
+   <title>Linh Truong - Portfolio</title>
+   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
+   <link rel="stylesheet" href="styles/main.css">
 </head>
 <body>
+    <div class="wrapper">
+        <header class="header">
+            <h1>Linh Truong</h1>
+            <nav>
+                <ul>
+                    <li><a href="#about" id="aboutNav">About</a></li>
+                    <li><a href="#portfolio" id="portfolioNav">Portfolio</a></li>
+                    <li><a href="" id="contactNav">Contact</a></li>
+                </ul>
+            </nav>
+        </header>
 
+        <main>
+            <section class="about" id="about">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-12">
+                            <h2>Front-end developer</h2>
+                            <p>Developing high quality responsive websites with exceptional user experience</p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <section class="portfolio" id="portfolio">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-12">
+                            <h2>Portfolio</h2>
+                        </div>
+                        <div class="col-12">
+                            <ul class="list-portfolio">
+                                <li class="darlie">
+                                    <a href="http://www.darlie.com.my/darliethematchmaker/en/home" target="_blank">
+                                        <div class="portfolio-details">
+                                            <p>HTML5, CSS3, Responsive, Javascript</p>
+                                        </div>
+                                        <img src="img/logo-darlie.png" alt="Darlie">
+                                    </a>
+                                </li>
+                                <li class="plus100">
+                                    <a href="https://100plus.com.my/" target="_blank">
+                                        <div class="portfolio-details">
+                                            <p>HTML5, CSS3, Responsive, Javascript</p>
+                                        </div>
+                                        <img src="img/logo-100plus.png" alt="100 Plus">
+                                    </a>
+                                </li>
+                            </ul>
+                            <ul class="list-portfolio">
+                                <li class="brunchwork">
+                                    <a href="https://brunchwork.brandfuss.com/" target="_blank">
+                                        <div class="portfolio-details">
+                                            <p>HTML5, CSS3, Responsive, Javascript, Wordpress</p>
+                                        </div>
+                                        <img src="img/logo-brunchwork.png" alt="Brunchwork">
+                                    </a>
+                                </li>
+                                <li class="fernleaf">
+                                    <a href="http://www.greatness.my/en/home" target="_blank">
+                                        <div class="portfolio-details">
+                                            <p>HTML5, CSS3, Responsive, Javascript, C#</p>
+                                        </div>
+                                        <img src="img/logo-fernleaf.png" alt="Fernleaf">
+                                    </a>
+                                </li>
+                            </ul>
+                            <ul class="list-portfolio">
+                                <li class="toyota">
+                                    <a href="https://toyota.com.my/" target="_blank">
+                                        <div class="portfolio-details">
+                                            <p>HTML5, CSS3, Responsive, Javascript, Kentico</p>
+                                        </div>
+                                        <img src="img/logo-toyota.png" alt="Toyota">
+                                    </a>
+                                </li>
+                                <li class="cottonon">
+                                    <a href="https://cottonon.com/AU/" target="_blank">
+                                        <div class="portfolio-details">
+                                            <p>HTML5, CSS3, Responsive, Javascript, Demandware</p>
+                                        </div>
+                                        <img src="img/logo-cottonon.png" alt="CottonOn">
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <section class="contact" id="contact">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-12">
+                            <h2>Let's Get In Touch!</h2>
+                        </div>
+                    </div>
+                    <div class="row contact-wrapper">
+                        <div class="col-6 email">
+                            <p><a href="mailto:truongthingoclinh@gmail.com"><i class="fas fa-envelope"></i></a></p>
+                            <p><a href="mailto:truongthingoclinh@gmail.com">truongthingoclinh@gmail.com</a></p>
+                        </div>
+                        <div class="col-6 linkedin">
+                            <p><a href="http://www.linkedin.com/in/linh-truong" target="_blank"><i class="fab fa-linkedin"></i></a></p>
+                            <p><a href="http://www.linkedin.com/in/linh-truong" target="_blank">Linh Truong</a></p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </main>
+
+        <footer class="footer">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12">Copyright © 2018 <span>Linh Truong</span></div>
+                </div>
+            </div>
+        </footer>
+    </div>
+
+    <script src="scripts/jquery.min.js" defer></script>
+    <script src="scripts/app.js" defer></script>
 </body>
 </html>
