--- a/dev/html/index.html
+++ b/dev/html/index.html
@@ -5,7 +5,7 @@
    <title>Linh Truong - Portfolio</title>
    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
-   <link rel="stylesheet" href="https://ngoclinhtruong.github.io/temp/styles/main.css">
+   <link rel="stylesheet" href="styles/main.css">
 </head>
 <body>
     <div class="wrapper">
@@ -128,7 +128,7 @@
         </footer>
     </div>
 
-    <script src="https://ngoclinhtruong.github.io/temp/scripts/jquery.min.js" defer></script>
-    <script src="https://ngoclinhtruong.github.io/temp/scripts/app.js" defer></script>
+    <script src="scripts/jquery.min.js" defer></script>
+    <script src="scripts/app.js" defer></script>
 </body>
 </html>
